dtypes known next->changing dytpes

--- a/Chicago-Crime.ipynb
+++ b/Chicago-Crime.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -23,224 +23,53 @@
       "/Users/raj/anaconda3/lib/python3.7/site-packages/IPython/core/interactiveshell.py:3058: DtypeWarning: Columns (21) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  interactivity=interactivity, compiler=compiler, result=result)\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "raw_data=pd.read_csv('data.csv')  #reading in the raw data from the csv and stored into dataframe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>ID</th>\n",
-       "      <th>Case Number</th>\n",
-       "      <th>Date</th>\n",
-       "      <th>Block</th>\n",
-       "      <th>IUCR</th>\n",
-       "      <th>Primary Type</th>\n",
-       "      <th>Description</th>\n",
-       "      <th>Location Description</th>\n",
-       "      <th>Arrest</th>\n",
-       "      <th>Domestic</th>\n",
-       "      <th>...</th>\n",
-       "      <th>Ward</th>\n",
-       "      <th>Community Area</th>\n",
-       "      <th>FBI Code</th>\n",
-       "      <th>X Coordinate</th>\n",
-       "      <th>Y Coordinate</th>\n",
-       "      <th>Year</th>\n",
-       "      <th>Updated On</th>\n",
-       "      <th>Latitude</th>\n",
-       "      <th>Longitude</th>\n",
-       "      <th>Location</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>0</td>\n",
-       "      <td>11034701</td>\n",
-       "      <td>JA366925</td>\n",
-       "      <td>01/01/2001 11:00:00 AM</td>\n",
-       "      <td>016XX E 86TH PL</td>\n",
-       "      <td>1153</td>\n",
-       "      <td>DECEPTIVE PRACTICE</td>\n",
-       "      <td>FINANCIAL IDENTITY THEFT OVER $ 300</td>\n",
-       "      <td>RESIDENCE</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>...</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>45.0</td>\n",
-       "      <td>11</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2001</td>\n",
-       "      <td>08/05/2017 03:50:08 PM</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>11227287</td>\n",
-       "      <td>JB147188</td>\n",
-       "      <td>10/08/2017 03:00:00 AM</td>\n",
-       "      <td>092XX S RACINE AVE</td>\n",
-       "      <td>0281</td>\n",
-       "      <td>CRIM SEXUAL ASSAULT</td>\n",
-       "      <td>NON-AGGRAVATED</td>\n",
-       "      <td>RESIDENCE</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>...</td>\n",
-       "      <td>21.0</td>\n",
-       "      <td>73.0</td>\n",
-       "      <td>02</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>02/11/2018 03:57:41 PM</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2</td>\n",
-       "      <td>11227583</td>\n",
-       "      <td>JB147595</td>\n",
-       "      <td>03/28/2017 02:00:00 PM</td>\n",
-       "      <td>026XX W 79TH ST</td>\n",
-       "      <td>0620</td>\n",
-       "      <td>BURGLARY</td>\n",
-       "      <td>UNLAWFUL ENTRY</td>\n",
-       "      <td>OTHER</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>...</td>\n",
-       "      <td>18.0</td>\n",
-       "      <td>70.0</td>\n",
-       "      <td>05</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>02/11/2018 03:57:41 PM</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>3</td>\n",
-       "      <td>11227293</td>\n",
-       "      <td>JB147230</td>\n",
-       "      <td>09/09/2017 08:17:00 PM</td>\n",
-       "      <td>060XX S EBERHART AVE</td>\n",
-       "      <td>0810</td>\n",
-       "      <td>THEFT</td>\n",
-       "      <td>OVER $500</td>\n",
-       "      <td>RESIDENCE</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>...</td>\n",
-       "      <td>20.0</td>\n",
-       "      <td>42.0</td>\n",
-       "      <td>06</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>02/11/2018 03:57:41 PM</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4</td>\n",
-       "      <td>11227634</td>\n",
-       "      <td>JB147599</td>\n",
-       "      <td>08/26/2017 10:00:00 AM</td>\n",
-       "      <td>001XX W RANDOLPH ST</td>\n",
-       "      <td>0281</td>\n",
-       "      <td>CRIM SEXUAL ASSAULT</td>\n",
-       "      <td>NON-AGGRAVATED</td>\n",
-       "      <td>HOTEL/MOTEL</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>...</td>\n",
-       "      <td>42.0</td>\n",
-       "      <td>32.0</td>\n",
-       "      <td>02</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>02/11/2018 03:57:41 PM</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 22 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "         ID Case Number                    Date                 Block  IUCR  \\\n",
-       "0  11034701    JA366925  01/01/2001 11:00:00 AM       016XX E 86TH PL  1153   \n",
-       "1  11227287    JB147188  10/08/2017 03:00:00 AM    092XX S RACINE AVE  0281   \n",
-       "2  11227583    JB147595  03/28/2017 02:00:00 PM       026XX W 79TH ST  0620   \n",
-       "3  11227293    JB147230  09/09/2017 08:17:00 PM  060XX S EBERHART AVE  0810   \n",
-       "4  11227634    JB147599  08/26/2017 10:00:00 AM   001XX W RANDOLPH ST  0281   \n",
-       "\n",
-       "          Primary Type                          Description  \\\n",
-       "0   DECEPTIVE PRACTICE  FINANCIAL IDENTITY THEFT OVER $ 300   \n",
-       "1  CRIM SEXUAL ASSAULT                       NON-AGGRAVATED   \n",
-       "2             BURGLARY                       UNLAWFUL ENTRY   \n",
-       "3                THEFT                            OVER $500   \n",
-       "4  CRIM SEXUAL ASSAULT                       NON-AGGRAVATED   \n",
-       "\n",
-       "  Location Description  Arrest  Domestic  ...  Ward  Community Area  FBI Code  \\\n",
-       "0            RESIDENCE   False     False  ...   8.0            45.0        11   \n",
-       "1            RESIDENCE   False     False  ...  21.0            73.0        02   \n",
-       "2                OTHER   False     False  ...  18.0            70.0        05   \n",
-       "3            RESIDENCE   False     False  ...  20.0            42.0        06   \n",
-       "4          HOTEL/MOTEL   False     False  ...  42.0            32.0        02   \n",
-       "\n",
-       "   X Coordinate Y Coordinate  Year              Updated On  Latitude  \\\n",
-       "0           NaN          NaN  2001  08/05/2017 03:50:08 PM       NaN   \n",
-       "1           NaN          NaN  2017  02/11/2018 03:57:41 PM       NaN   \n",
-       "2           NaN          NaN  2017  02/11/2018 03:57:41 PM       NaN   \n",
-       "3           NaN          NaN  2017  02/11/2018 03:57:41 PM       NaN   \n",
-       "4           NaN          NaN  2017  02/11/2018 03:57:41 PM       NaN   \n",
-       "\n",
-       "  Longitude  Location  \n",
-       "0       NaN       NaN  \n",
-       "1       NaN       NaN  \n",
-       "2       NaN       NaN  \n",
-       "3       NaN       NaN  \n",
-       "4       NaN       NaN  \n",
-       "\n",
-       "[5 rows x 22 columns]"
+       "ID                        int64\n",
+       "Case Number              object\n",
+       "Date                     object\n",
+       "Block                    object\n",
+       "IUCR                     object\n",
+       "Primary Type             object\n",
+       "Description              object\n",
+       "Location Description     object\n",
+       "Arrest                     bool\n",
+       "Domestic                   bool\n",
+       "Beat                      int64\n",
+       "District                float64\n",
+       "Ward                    float64\n",
+       "Community Area          float64\n",
+       "FBI Code                 object\n",
+       "X Coordinate            float64\n",
+       "Y Coordinate            float64\n",
+       "Year                      int64\n",
+       "Updated On               object\n",
+       "Latitude                float64\n",
+       "Longitude               float64\n",
+       "Location                 object\n",
+       "dtype: object"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data=pd.read_csv('data.csv')\n",
-    "data.head()"
+    "raw_data.dtypes\n",
+    "raw_data."
    ]
   },
   {
