--- a/Chicago-Crime.ipynb
+++ b/Chicago-Crime.ipynb
@@ -31,261 +31,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 7083781 entries, 0 to 7083780\n",
-      "Data columns (total 22 columns):\n",
-      "ID                      int64\n",
-      "Case Number             object\n",
-      "Date                    object\n",
-      "Block                   object\n",
-      "IUCR                    object\n",
-      "Primary Type            object\n",
-      "Description             object\n",
-      "Location Description    object\n",
-      "Arrest                  bool\n",
-      "Domestic                bool\n",
-      "Beat                    int64\n",
-      "District                float64\n",
-      "Ward                    float64\n",
-      "Community Area          float64\n",
-      "FBI Code                object\n",
-      "X Coordinate            float64\n",
-      "Y Coordinate            float64\n",
-      "Year                    int64\n",
-      "Updated On              object\n",
-      "Latitude                float64\n",
-      "Longitude               float64\n",
-      "Location                object\n",
-      "dtypes: bool(2), float64(7), int64(3), object(10)\n",
-      "memory usage: 1.1+ GB\n",
-      "Index(['ID', 'Case Number', 'Date', 'Block', 'IUCR', 'Primary Type',\n",
-      "       'Description', 'Location Description', 'Arrest', 'Domestic', 'Beat',\n",
-      "       'District', 'Ward', 'Community Area', 'FBI Code', 'X Coordinate',\n",
-      "       'Y Coordinate', 'Year', 'Updated On', 'Latitude', 'Longitude',\n",
-      "       'Location'],\n",
-      "      dtype='object')\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>ID</th>\n",
-       "      <th>Case Number</th>\n",
-       "      <th>Date</th>\n",
-       "      <th>Block</th>\n",
-       "      <th>IUCR</th>\n",
-       "      <th>Primary Type</th>\n",
-       "      <th>Description</th>\n",
-       "      <th>Location Description</th>\n",
-       "      <th>Arrest</th>\n",
-       "      <th>Domestic</th>\n",
-       "      <th>Beat</th>\n",
-       "      <th>District</th>\n",
-       "      <th>Ward</th>\n",
-       "      <th>Community Area</th>\n",
-       "      <th>FBI Code</th>\n",
-       "      <th>X Coordinate</th>\n",
-       "      <th>Y Coordinate</th>\n",
-       "      <th>Year</th>\n",
-       "      <th>Latitude</th>\n",
-       "      <th>Longitude</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>0</td>\n",
-       "      <td>11034701</td>\n",
-       "      <td>JA366925</td>\n",
-       "      <td>01/01/2001 11:00:00 AM</td>\n",
-       "      <td>016XX E 86TH PL</td>\n",
-       "      <td>1153</td>\n",
-       "      <td>DECEPTIVE PRACTICE</td>\n",
-       "      <td>FINANCIAL IDENTITY THEFT OVER $ 300</td>\n",
-       "      <td>RESIDENCE</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>412</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>45.0</td>\n",
-       "      <td>11</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2001</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>11227287</td>\n",
-       "      <td>JB147188</td>\n",
-       "      <td>10/08/2017 03:00:00 AM</td>\n",
-       "      <td>092XX S RACINE AVE</td>\n",
-       "      <td>0281</td>\n",
-       "      <td>CRIM SEXUAL ASSAULT</td>\n",
-       "      <td>NON-AGGRAVATED</td>\n",
-       "      <td>RESIDENCE</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>2222</td>\n",
-       "      <td>22.0</td>\n",
-       "      <td>21.0</td>\n",
-       "      <td>73.0</td>\n",
-       "      <td>02</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2</td>\n",
-       "      <td>11227583</td>\n",
-       "      <td>JB147595</td>\n",
-       "      <td>03/28/2017 02:00:00 PM</td>\n",
-       "      <td>026XX W 79TH ST</td>\n",
-       "      <td>0620</td>\n",
-       "      <td>BURGLARY</td>\n",
-       "      <td>UNLAWFUL ENTRY</td>\n",
-       "      <td>OTHER</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>835</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>18.0</td>\n",
-       "      <td>70.0</td>\n",
-       "      <td>05</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>3</td>\n",
-       "      <td>11227293</td>\n",
-       "      <td>JB147230</td>\n",
-       "      <td>09/09/2017 08:17:00 PM</td>\n",
-       "      <td>060XX S EBERHART AVE</td>\n",
-       "      <td>0810</td>\n",
-       "      <td>THEFT</td>\n",
-       "      <td>OVER $500</td>\n",
-       "      <td>RESIDENCE</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>313</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>20.0</td>\n",
-       "      <td>42.0</td>\n",
-       "      <td>06</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4</td>\n",
-       "      <td>11227634</td>\n",
-       "      <td>JB147599</td>\n",
-       "      <td>08/26/2017 10:00:00 AM</td>\n",
-       "      <td>001XX W RANDOLPH ST</td>\n",
-       "      <td>0281</td>\n",
-       "      <td>CRIM SEXUAL ASSAULT</td>\n",
-       "      <td>NON-AGGRAVATED</td>\n",
-       "      <td>HOTEL/MOTEL</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>122</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>42.0</td>\n",
-       "      <td>32.0</td>\n",
-       "      <td>02</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         ID Case Number                    Date                 Block  IUCR  \\\n",
-       "0  11034701    JA366925  01/01/2001 11:00:00 AM       016XX E 86TH PL  1153   \n",
-       "1  11227287    JB147188  10/08/2017 03:00:00 AM    092XX S RACINE AVE  0281   \n",
-       "2  11227583    JB147595  03/28/2017 02:00:00 PM       026XX W 79TH ST  0620   \n",
-       "3  11227293    JB147230  09/09/2017 08:17:00 PM  060XX S EBERHART AVE  0810   \n",
-       "4  11227634    JB147599  08/26/2017 10:00:00 AM   001XX W RANDOLPH ST  0281   \n",
-       "\n",
-       "          Primary Type                          Description  \\\n",
-       "0   DECEPTIVE PRACTICE  FINANCIAL IDENTITY THEFT OVER $ 300   \n",
-       "1  CRIM SEXUAL ASSAULT                       NON-AGGRAVATED   \n",
-       "2             BURGLARY                       UNLAWFUL ENTRY   \n",
-       "3                THEFT                            OVER $500   \n",
-       "4  CRIM SEXUAL ASSAULT                       NON-AGGRAVATED   \n",
-       "\n",
-       "  Location Description  Arrest  Domestic  Beat  District  Ward  \\\n",
-       "0            RESIDENCE   False     False   412       4.0   8.0   \n",
-       "1            RESIDENCE   False     False  2222      22.0  21.0   \n",
-       "2                OTHER   False     False   835       8.0  18.0   \n",
-       "3            RESIDENCE   False     False   313       3.0  20.0   \n",
-       "4          HOTEL/MOTEL   False     False   122       1.0  42.0   \n",
-       "\n",
-       "   Community Area FBI Code  X Coordinate  Y Coordinate  Year  Latitude  \\\n",
-       "0            45.0       11           NaN           NaN  2001       NaN   \n",
-       "1            73.0       02           NaN           NaN  2017       NaN   \n",
-       "2            70.0       05           NaN           NaN  2017       NaN   \n",
-       "3            42.0       06           NaN           NaN  2017       NaN   \n",
-       "4            32.0       02           NaN           NaN  2017       NaN   \n",
-       "\n",
-       "   Longitude  \n",
-       "0        NaN  \n",
-       "1        NaN  \n",
-       "2        NaN  \n",
-       "3        NaN  \n",
-       "4        NaN  "
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#cleaning the data\n",
-    "raw_data.info()  #checking for info\n",
-    "print(raw_data.columns) \n",
-    "after_dropped_data=raw_data.drop(columns=['Location','Updated On']) #columns which are not necessary and are duplicates\n",
-    "after_dropped_data.head()\n"
+    "\n",
+    "#dropping the duplicate and unwanted columns\n",
+    "after_dropped_data=raw_data.drop(columns=['Location','Updated On','X Coordinate','Y Coordinate']) #columns which are not necessary and are duplicates\n",
+    "\n",
+    "\n",
+    "#total count of values\n",
+    "total_count= after_dropped_data.count()\n",
+    "total_count\n",
+    "\n",
+    "count=after_dropped_data.isna().sum() #counting for each column of how many null values are there\n",
+    "\n",
+    "def get_cols_withNan(series):      #getting the selected colums with null values and their count\n",
+    "    hasNaN_col=[]\n",
+    "    for index, value in series.items():\n",
+    "        if(value>0):\n",
+    "            hasNaN_col.append(index)\n",
+    "    return series[hasNaN_col]\n",
+    "\n",
+    "\n",
+    "#fixing the NaN data\n",
+    "\n",
+    "\n",
+    "Columns_with_null=get_cols_withNan(count)\n",
+    "Columns_with_null\n",
+    "\n",
+    "\n",
+    "    \n",
+    "    "
    ]
   },
   {
